# warp-fluid

./: README.md  pyproject.toml
outputs/naca_density_based/: final_state.npz
outputs/naca_pressure_based/: final_state.npz
outputs/naca_pressure_based/trajectory/: trajectory_history.npz  trajectory_manifest.json
warp_fluid/: README.md  __init__.py
warp_fluid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
warp_fluid/core/: __init__.py  base.py  boundary.py  field.py  grid.py
warp_fluid/examples/: __init__.py  cylinder_flow.py  naca_airfoil.py  naca_density_based.py  naca_density_based_viz.py  naca_geometry_viz.py  naca_pressure_based.py  naca_pressure_based_trajectory.py  naca_pressure_based_viz.py  tesla_valve.py
warp_fluid/examples/configs/: cylinder_flow.yaml  naca_airfoil.yaml  naca_density_based.yaml  naca_pressure_based.yaml  tesla_valve.yaml
warp_fluid/geom/: __init__.py
warp_fluid/geom/levelset_grid/: __init__.py  airfoil.py  box.py  regular2d.py  sphere.py  tesla_valve.py  test_levelset.py
warp_fluid/ops/: __init__.py  diff.py  interp.py  mask.py  test_mask.py
warp_fluid/physics/: __init__.py  advect.py  force.py  incompressible.py  test_3d_support.py
warp_fluid/solver/: __init__.py  density_based_wp.py  optimize.py  pressure_based.py  pressure_based_np.py  pressure_based_wp.py  test_density_based_wp.py  test_optimize.py  test_pressure_based.py  test_pressure_based_wp.py
